# LonelyCat

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CI_FIX.md  CLAUDE.md  Makefile  PHASE_2_2_D_COMPLETION.md  PR_BODY_run_code_snippet_pr6.md  PR_DESCRIPTION.md  PR_DESCRIPTION_AGENT_LOOP.md  PR_MEMORY_SPEC.md  README.md  conftest.py  demo_executor.py  demo_planner.py  demo_writegate.py  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test_agent_loop_v2.py
apps/agent-worker/: Dockerfile  README.md  conftest.py  pyproject.toml
apps/agent-worker/agent_worker/: __init__.py  chat.py  chat_flow.py  cli.py  config.py  fact_agent.py  llm_config.py  memory_client.py  memory_gate.py  persona.py  responder.py  retract_agent.py  retract_cli.py  router.py  run.py  trace.py  update_agent.py  update_cli.py
apps/agent-worker/tests/: test_baidu_html_backend.py  test_baidu_html_parser.py  test_bocha_backend.py  test_chat.py  test_chat_flow_e2e.py  test_ddg_html_backend.py  test_ddg_html_parser.py  test_default_catalog_ddg_backend.py  test_default_catalog_web_backend_selection.py  test_default_catalog_web_fetch_backend_selection.py  test_default_catalog_web_provider.py  test_fact_agent.py  test_facts_utils.py  test_http_fetch_backend.py  test_json_only_wrapper.py  test_llm_factory.py  test_mcp_provider.py  test_mcp_stdio_client.py  test_memory_client_list_facts_parsing.py  test_memory_client_proposals.py  test_memory_gate_parsing.py  test_memory_gate_qwen.py  test_responder_facts.py  test_retract_agent.py  (+25 more)
apps/core-api/: Dockerfile  README.md  pyproject.toml  verify_pr1.py
(+276 files in other folders)
