[project]
name = "lonelycat-agent-worker"
version = "0.1.0"
description = "Background worker for LonelyCat"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_worker*"]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q"
