[project]
name = "lonelycat-core-api"
version = "0.1.0"
description = "FastAPI service for LonelyCat"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn>=0.27",
  "lonelycat-memory",
  "lonelycat-protocol",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "-q"
