[project]
name = "lonelycat-core-api"
version = "0.1.0"
description = "FastAPI service for LonelyCat"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn>=0.27",
  "python-dotenv>=1.0",
  "lonelycat-memory",
  "lonelycat-protocol",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "integration: sandbox integration tests (real docker, skip without docker)",
  "sandbox_it: same as integration, use with RUN_DOCKER_IT=1 or diagnose",
]
